<resources>
    <string name="app_name">EKUMI</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_sync_in_progress">Synchronizing user data. Please wait...</string>
    <string name="error_msg_sync_failed">Synchronization failed, please try again!</string>
    <string name="user_registration_title_text">Find out why a lot of people love eKumi</string>
    <string name="sign_up_text">Sign up to eKumi, it\'s free</string>
    <string name="personal_account_text">Personal account</string>
    <string name="continue_text">Continue</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="create_password">Create your password</string>
    <string name="regist_user">Create account</string>
    <string name="user_name">Enter your user name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="mainMobileNumber">Mobile phone number</string>
    <string name="auxMobileNumber">Optional mobile phone</string>
    <string name="address">Address details</string>
    <string name="municipal">Urban</string>
    <string name="rural">Rural</string>
    <string name="rua_av">Street/Avenue</string>
    <string name="houseNumber">Door number</string>
    <string name="select_provincia">Select province</string>
    <string name="select_distrito">Select district</string>
    <string name="select_municipio">Select municipality</string>
    <string name="select_posto">Select posto administrativo</string>
    <string name="select_bairro">Select neighbourhood</string>
    <string name="login_text">Login</string>
    <string name="user_registration_link_text">First time using eKumi? Create an account</string>
    <string name="user_forgotten_pass_link_text">Forgot your Pin?</string>
    <string name="localizacao_settings_sync_in_progress">Synchronizing location settings, please wait...</string>
    <string name="activity_login_alert_ok">OK</string>
    <string name="network_not_available">Internet not available, check your connection settings.</string>
    <string name="title_activity_mobi_care_login">eKumi Login</string>
    <string name="login_user_name">User name</string>
    <string name="login_password">Password</string>
    <string name="user_password_invalid">Password is incorrect.</string>
    <string name="login_app_name">eKumi</string>
    <string name="user_name_is_taken">This username is not available, please try another one!</string>
    <string name="checking_user_name_availability">Checking user name availability, please wait...</string>
    <string name="passwords_not_match">Password does not match, please check!</string>
    <string name="user_name_short">Please make sure the user name has at least four charateres!</string>
    <string name="passwords_short">Please make sure your password has at least four charateres!</string>
    <string name="search_what_you_want">Search here</string>
    <string name="searching">Searching...</string>
    <string name="no_search_results">No results for your search!</string>
    <string name="sync_time_out">Synchronization failed. Time out. Please try again!</string>
    <string name="loading_user_data">Loading user information, please wait...</string>
    <string name="internet_not_available">Internet not available, check your connection settings.</string>
    <string name="checking_credential">Checking your credentials...</string>
    <string name="drug_not_available">Not available</string>
    <string name="drug_available">Available</string>
    <string name="action_play_next">Save</string>
    <string name="action_add_favourite">Add to Favorite</string>
    <string name="title_activity_farmacia_maps">Map</string>
    <string name="or">OR</string>
    <string name="save">Save</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="mobile_number">Mobile number</string>
    <string name="new_pin">New pin number</string>
    <string name="confirm_new_pin">Confirm pin number</string>
    <string name="reset">Reset</string>
    <string name="code_msg">You will receive a four digits code shortly, please insert it below</string>
    <string name="personal_mobile_number">Mobile number</string>
    <string name="code_request_text">Please type here your email address</string>
    <string name="code_request_msg">You will receive a confirmation code.</string>
    <string name="user_mobile_number">Mobile number</string>
    <string name="invalid_number">The entered number is not valid, please check</string>
    <string name="diferent_pins">The pin codes does not match</string>
    <string name="reset_text">Create your new pin code</string>
    <string name="verification_code">Verification code</string>
    <string name="search_label">SEARCH</string>
    <string name="medicine_list">Found medicine list</string>
    <string name="powered_by">POWERED BY INSYSTEMS</string>
    <string name="device_location">My location</string>
    <string name="number_taken">The number your entered is not valid</string>
    <string name="ekumi_description">ekumi, a platform that helps you to find the exact medicine you are looking for, quickly and near your location.</string>
    <string name="ekumi_slogan">eKumi, your hand pharmacy!</string>
    <string name="custo">Expense</string>
    <string name="disponibilidade">Availability</string>
    <string name="farm_cias">Pharmacies</string>
    <string name="medicamentos">Medicine</string>
    <string name="pharmacy_open">Open</string>
    <string name="pharmacy_closed">Closed</string>
    <string name="no_gps_location">eKumi could not get your device location</string>
</resources>