<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.user.registration.fragment.PersonalDataFragment">

    <data class="PersonalDataFragmentDataBinding">
        <variable
            name="user"
            type="mz.co.insystems.mobicare.model.user.User"/>

        <variable
            name="localizacao"
            type="mz.co.insystems.mobicare.model.endereco.localizacao.Localizacao"/>

        <variable name="provinciaAdapter" type="mz.co.insystems.mobicare.common.LocalizacaoSpinnerAdapter"/>
        <variable name="distritoAdapter" type="mz.co.insystems.mobicare.common.LocalizacaoSpinnerAdapter"/>
        <variable name="municipioAdapter" type="mz.co.insystems.mobicare.common.LocalizacaoSpinnerAdapter"/>
        <variable name="postoAdapter" type="mz.co.insystems.mobicare.common.LocalizacaoSpinnerAdapter"/>
        <variable name="bairroAdapter" type="mz.co.insystems.mobicare.common.LocalizacaoSpinnerAdapter"/>

        <variable
            name="presenter"
            type="mz.co.insystems.mobicare.activities.user.registration.fragment.presenter.PersonalDataFragmentEventHandlerImpl"/>
        <import type="android.view.View"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_content_padding">



                <TextView
                    android:id="@+id/personal_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_14dp"
                    style="@style/personal_account_text"
                    android:text="@string/personal_account_text" />



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_apelido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtApelido"
                        android:layout_width="match_parent"
                        android:hint="@string/surname"
                        android:text="@={user.pessoa.surname}"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        style="@style/edit_text_style"
                        android:background="@drawable/edit_text_border"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:hint="@string/name"
                        android:text="@={user.pessoa.name}"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        style="@style/edit_text_style"
                        android:background="@drawable/edit_text_border"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:hint="@string/email_address"
                        android:text="@={user.pessoa.contacto.email}"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        style="@style/edit_text_style"
                        android:background="@drawable/edit_text_border"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_telemovel_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtMainMobileNumber"
                        android:layout_width="match_parent"
                        android:hint="@string/mainMobileNumber"
                        android:text="@={user.pessoa.contacto.mainMobileNumber}"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        style="@style/edit_text_style"
                        android:background="@drawable/edit_text_border"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_telemovel_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtAuxMobileNumber"
                        android:layout_width="match_parent"
                        android:hint="@string/auxMobileNumber"
                        android:text="@={user.pessoa.contacto.auxMobileNumber}"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        style="@style/edit_text_style"
                        android:background="@drawable/edit_text_border"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_14dp"
                    style="@style/personal_account_text"
                    android:text="@string/address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/rdgZona"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:checkedButton="@+id/rdMunicipal">

                        <RadioButton
                            android:id="@+id/rdMunicipal"
                            android:layout_weight="1"
                            android:layout_width="@dimen/dimen_0dp"
                            android:checked="@{!localizacao.rural}"
                            android:onClick="@{() -> presenter.onTipoLocalizacaoClick(@string/municipal)}"
                            android:layout_height="wrap_content"
                            android:text="@string/municipal" />

                        <RadioButton
                            android:id="@+id/rdRural"
                            android:layout_weight="1"
                            android:layout_width="@dimen/dimen_0dp"
                            android:checked="@{localizacao.rural}"
                            android:onClick="@{() -> presenter.onTipoLocalizacaoClick(@string/rural)}"
                            android:layout_height="wrap_content"
                            android:text="@string/rural" />
                    </RadioGroup>


                </LinearLayout>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/provincia"
                    android:prompt="@string/select_provincia"
                    style="@style/spinner_style"
                    app:adapter="@{provinciaAdapter}"
                    bind:selectedOpt="@={localizacao.selectedProvincia}"
                />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/distrito"
                    android:prompt="@string/select_distrito"
                    style="@style/spinner_style"
                    android:visibility="@{!localizacao.rural ? View.GONE : View.VISIBLE}"
                    app:adapter="@{distritoAdapter}"
                    bind:selectedOpt="@={localizacao.selectedDistrito}"
                    />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/municipio"
                    android:prompt="@string/select_municipio"
                    style="@style/spinner_style"
                    android:visibility="@{localizacao.rural ? View.GONE : View.VISIBLE}"
                    app:adapter="@{municipioAdapter}"
                    bind:selectedOpt="@={localizacao.selectedMunicipio}"
                    />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/posto"
                    android:prompt="@string/select_posto"
                    style="@style/spinner_style"
                    android:visibility="@{!localizacao.rural ? View.GONE : View.VISIBLE}"
                    app:adapter="@{postoAdapter}"
                    bind:selectedOpt="@={localizacao.selectedPosto}"
                    />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/bairro"
                    android:prompt="@string/select_bairro"
                    style="@style/spinner_style"
                    android:visibility="@{localizacao.rural ? View.GONE : View.VISIBLE}"
                    app:adapter="@{bairroAdapter}"
                    bind:selectedOpt="@={localizacao.selectedBairro}"
                    />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_rua_av"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtRuaAv"
                        android:layout_width="match_parent"
                        android:hint="@string/rua_av"
                        android:text="@={user.pessoa.endereco.ruaAvenida}"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        style="@style/edit_text_style"
                        android:background="@drawable/edit_text_border"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtHouseNumber"
                        android:layout_width="match_parent"
                        android:hint="@string/houseNumber"
                        android:text="@={user.pessoa.endereco.ncasa}"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:imeOptions="actionDone"
                        style="@style/edit_text_style"

                        android:background="@drawable/edit_text_border"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/button_shape"
                android:onClick="@{() -> presenter.doSave(user)}"
                android:text="@string/continue_text"/>

        </LinearLayout>

    </ScrollView>

</layout>
