<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.user.registration.fragment.UserAccountFragment">

    <data >
        <variable
            name="user"
            type="mz.co.insystems.mobicare.model.user.User"/>
        <variable
            name="presenter"
            type="mz.co.insystems.mobicare.activities.user.registration.fragment.presenter.UserAccountFragmentEventHandlerImpl"/>

    </data>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/login_background">



            <LinearLayout
                android:id="@+id/inputs"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_content_padding">

                <ImageView
                    android:layout_width="@dimen/user_registration_imview_width"
                    android:layout_height="@dimen/user_registration_imview_heigth"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"
                    />

                <TextView
                    android:id="@+id/user_registration_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_14dp"
                    style="@style/user_registration_title_text"
                    android:text="@string/user_registration_title_text" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/color_line"/>

                <TextView
                    android:id="@+id/sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginBottom="@dimen/dimen_14dp"
                    style="@style/sign_up_text"
                    android:text="@string/sign_up_text" />

                <TextView
                    android:id="@+id/personal_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_14dp"
                    style="@style/personal_account_text"
                    android:text="@string/personal_account_text" />



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:textColorHint="@color/hint_text_appearence"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtUserName"
                        android:layout_width="match_parent"
                        android:hint="@string/user_name"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:text="@={user.userName}"
                        style="@style/edit_text_style"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:background="@drawable/edit_text_border">
                        <requestFocus/>
                    </android.support.design.widget.TextInputEditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:hint="@string/create_password"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="textPassword"
                        android:text="@={user.password}"
                        style="@style/edit_text_style"
                        android:imeOptions="actionNext"
                        android:background="@drawable/edit_text_border"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:textColorHint="@color/hint_text_appearence"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPasswordConfirm"
                        android:layout_width="match_parent"
                        android:hint="@string/confirm_password"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:inputType="textPassword"
                        android:text="@={user.passwordConfirm}"
                        style="@style/edit_text_style"
                        android:imeOptions="actionDone"
                        android:background="@drawable/edit_text_border"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/button_shape"
                android:onClick="@{() -> presenter.nextFragment(user)}"
                android:text="@string/continue_text"/>

        </RelativeLayout>
</layout>